--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".CheckMilesActivity"
+            android:label="@string/title_activity_check_miles" >
+        </activity>
     </application>
 
 </manifest>
