Vehicle info saves on exit

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
             android:name=".MainActivity"
             android:label="@string/title_activity_main" >
         </activity>
+        <activity
+            android:name=".FillUpActivity"
+            android:label="@string/title_activity_fill_up" >
+        </activity>
     </application>
 
 </manifest>
